--- a/3_model/index.html
+++ b/3_model/index.html
@@ -24,6 +24,7 @@
         let sys = system("glCanvas");
         let gl = sys.drawContext.gl;
         let uboTime = sys.render.uboCreate(16, 2);
+        let uboCamera = sys.render.uboCreate(16, 3); //80
         let mtl = sys.render.mtlCreate(
           ".\\bin\\shaders\\3d",
           ["P", "N", { P: 3, N: 3 }],
@@ -40,7 +41,7 @@
             },
           ],
           null,
-          ["time", { time: uboTime }]
+          ["time", "camera", { time: uboTime, camera: uboCamera }]
         );
         /*
         let prim;
