--- a/5/client/html/userHomePage.html
+++ b/5/client/html/userHomePage.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <title>SocketIO</title>
     <style>
+      .link {
+        font-size: 150%;
+      }
       .button {
         background-color: #4caf50; /* Green */
         border: none;
@@ -24,11 +27,16 @@
     </style>
   </head>
   <body>
-    <script src="bundle.js" type="module"></script>
+    <script src="logIn.js" type="module"></script>
     <input type="text" id="name" /><br /><br />
     <input type="text" id="password" />
     <br />
     <br />
     <input type="button" class="button1" id="button" />
+    <br />
+    <br />
+    <a class="link" href="../signUp/signUp.html">Sign up</a>
+    <br />
+    <a href="../index.html" aria-setsize="80%">back</a>
   </body>
 </html>
