--- a/5/client/html/signUp.html
+++ b/5/client/html/signUp.html
@@ -26,27 +26,6 @@
     <a class="link" href="./logIn.html" aria-setsize="80%">Log in</a>
     <br />
     <a href="./index.html" aria-setsize="80%">back</a>
-    <script type="module">
-      const name = document.querySelector("#name");
-      const password = document.querySelector("#password");
-      document.getElementById("button").addEventListener("click", async () => {
-        try {
-          const res = await fetch("/function/signUp", {
-            method: "POST",
-            body: JSON.stringify({
-              name: name.value,
-              password: password.value,
-            }),
-            headers: { "Content-Type": "application/json" },
-          });
-          const data = await res.json();
-          if (res.status == 401 || res.status == 400) throw data.messange;
-          document.cookie = JSON.stringify(data);
-          location.assign("./userHomePage.html");
-        } catch (err) {
-          console.log(err);
-        }
-      });
-    </script>
+    <script type="module" src="signup.js"></script>
   </body>
 </html>
