--- a/5/client/html/signUp.html
+++ b/5/client/html/signUp.html
@@ -26,6 +26,10 @@
     <a class="link" href="./logIn.html" aria-setsize="80%">Log in</a>
     <br />
     <a href="./index.html" aria-setsize="80%">back</a>
+    <br />
+    <dir>
+      <p id="textErrorMessange"></p>
+    </dir>
     <script type="module" src="signup.js"></script>
   </body>
 </html>
