--- a/5/client/html/logIn.html
+++ b/5/client/html/logIn.html
@@ -28,6 +28,10 @@
     <a class="link" href="./signUp.html">Sign up</a>
     <br />
     <a href="./index.html" aria-setsize="80%">back</a>
+    <br />
+    <dir>
+      <p id="textErrorMessange"></p>
+    </dir>
     <script type="module" src="login.js"></script>
   </body>
 </html>
