--- a/5/client/html/userHomePage.html
+++ b/5/client/html/userHomePage.html
@@ -25,6 +25,77 @@
       .tabcontext {
         display: none;
       }
+      #selfUser {
+        text-align: right;
+        text-indent: 100px;
+      }
+      #otherUser {
+        overflow-x: visible;
+        text-align: left;
+      }
+      #Chats {
+        width: 30em;
+      }
+      .messangebox {
+        height: 20em;
+        overflow: auto;
+      }
+      .msg .info {
+        font-family: inherit;
+        font-weight: bold;
+        padding-right: 0.5em;
+        color: #31708f;
+      }
+      .msg {
+        margin-bottom: 0.5em;
+        padding-top: 0.5em;
+        position: relative;
+        z-index: 1;
+        cursor: pointer;
+        word-wrap: break-word;
+      }
+      #zatemnenie {
+        background: rgba(102, 102, 102, 0.5);
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: none;
+      }
+      #okno {
+        width: 300px;
+        height: 50px;
+        text-align: center;
+        padding: 15px;
+        border: 3px solid #0000cc;
+        border-radius: 10px;
+        color: #0000cc;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        margin: auto;
+        background: #fff;
+      }
+      #zatemnenie:target {
+        display: block;
+      }
+      .close {
+        display: inline-block;
+        border: 1px solid #0000cc;
+        color: #0000cc;
+        padding: 0 12px;
+        margin: 10px;
+        text-decoration: none;
+        background: #f2f2f2;
+        font-size: 14pt;
+        cursor: pointer;
+      }
+      .close:hover {
+        background: #e6e6ff;
+      }
     </style>
   </head>
   <body>
@@ -32,6 +103,14 @@
     <p><button class="button" id="logout">logout</button></p>
     <br />
     <br />
+    <div id="zatemnenie">
+      <div id="okno">
+        Всплывающее окошко!<br />
+        <a href="#" class="close">Закрыть окно</a>
+      </div>
+    </div>
+    <a href="#zatemnenie">Вызвать всплывающее окно</a>
+
     <div id="buttons"></div>
 
     <div id="Chats"></div>
